--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,13 @@ before_install:
   - docker build  -t yossishalem/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true yossishalem/docker-react yarn run test
+	- docker run -e CI=true yossishalem/docker-react yarn run test
+	
+provider: elasticbeanstalk
+region: "us-east-1"
+app: "docker-react"
+env: "DockerReact-env"
+backet_name: "elasticbeanstalk-us-east-1-428125636239"
+backet_path: "docker-react"
+on:
+	branch: master
