--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build  -t yossishalem/docker-react -f Dockerfile.dev .
 
 script:
-	- docker run -e CI=true yossishalem/docker-react yarn run test
+  - docker run -e CI=true yossishalem/docker-react yarn run test
 	
 provider: elasticbeanstalk
 region: "us-east-1"
@@ -15,4 +15,6 @@ env: "DockerReact-env"
 backet_name: "elasticbeanstalk-us-east-1-428125636239"
 backet_path: "docker-react"
 on:
-	branch: master
+  branch: master
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
